docs: added idataaccess example to readme

--- a/package.json
+++ b/package.json
@@ -60,5 +60,9 @@
     "**/*.ts": [
       "eslint --fix"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Bankole2000/service-reponse-formatter"
   }
 }
